--- a/storageclass.yml
+++ b/storageclass.yml
@@ -1,35 +1,23 @@
----
-apiVersion: storage.k8.io/v1
+apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: bronze
-provisioner: kubernetes.io/gce-pd
+provisioner: kubernetes.io/azure-file
 parameters:
-  type: pd-standard
-  
-  ---
-apiVersion: storage.k8.io/v1
+  storageAccount: pnstandarddatastorage
+
+apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: silver
-provisioner: kubernetes.io/gce-pd
+provisioner: kubernetes.io/azure-file
 parameters:
-  type: pd-standard
-  
-  ---
-apiVersion: storage.k8.io/v1
+  storageAccount: pnstandarddatastorage
+
+apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: gold
-provisioner: kubernetes.io/gce-pd
+provisioner: kubernetes.io/azure-file
 parameters:
-  type: pd-standard
-  
-  ---
-apiVersion: storage.k8.io/v1
-kind: StorageClass
-metadata:
-  name: platnume
-provisioner: kubernetes.io/gce-pd
-parameters:
-  type: pd-standard
+  storageAccount: pnstandarddatastorage
