--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,11 +1,11 @@
 steps:
 #Build the image 
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build','-t','gcr.io/${_PROJECT}/${_CONTAINERNAME}:tag1','.']
+  args: ['build','-t','gcr.io/$PROJECT_ID/quickstart-docker-repo/quickstart-image:tag1','.']
 
 #Push the image  
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push','gcr.io/${_PROJECT}/${_CONTAINERNAME}:tag1']
+  args: ['push','gcr.io/$PROJECT_ID/quickstart-docker-repo/quickstart-image:tag1']
   
 #Developers ONLY change
 #_VERSION: v1.0
