--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,11 +1,11 @@
 steps:
 #Build the image 
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build','-t','gcr.io/$PROJECT_ID/quickstart-docker-repo/${_IMAGE}-image:${_VERSION}','.']
+  args: ['build','-t','gcr.io/$PROJECT_ID/quickstart-docker-repo/tomecat-image:${_VERSION}','.']
 
 #Push the image  
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push','gcr.io/$PROJECT_ID/quickstart-docker-repo/${_IMAGE}-image:${_VERSION}']
+  args: ['push','gcr.io/$PROJECT_ID/quickstart-docker-repo/tomcat-image:${_VERSION}']
   
 substitutions:
     #Developers ONLY change
