--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,15 +8,15 @@ steps:
   args: ['push','gcr.io/$PROJECT_ID/quickstart-docker-repo/${_IMAGE}-image:${_VERSION}']
   
 ##Update the container image using kubectl set
-- name: 'gcr.io/cloud-builders/kubectl'
-  args:
-  - 'set'
-  - 'image'
-  - 'deployment/${_DEPLOYMENTNAME}'
-  - '${_CONTAINERNAME}=gcr.io/${_PROJECT}/${_CONTAINERNAME}:${_VERSION}'
-  env:
-  - 'CLOUDSDK_COMPUTE_ZONE=${_ZONE}'
-  - 'CLOUDSDK_CONTAINER_CLUSTER=${_GKE_CLUSTER}'
+#- name: 'gcr.io/cloud-builders/kubectl'
+#  args:
+#  - 'set'
+#  - 'image'
+#  - 'deployment/${_DEPLOYMENTNAME}'
+#  - '${_CONTAINERNAME}=gcr.io/${_PROJECT}/${_CONTAINERNAME}:${_VERSION}'
+#  env:
+#  - 'CLOUDSDK_COMPUTE_ZONE=${_ZONE}'
+#  - 'CLOUDSDK_CONTAINER_CLUSTER=${_GKE_CLUSTER}'
   
 substitutions:
     #GCP Specific configuration. Please DON'T change anything
