--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -17,6 +17,15 @@ steps:
 #  env:
 #  - 'CLOUDSDK_COMPUTE_ZONE=${_ZONE}'
 #  - 'CLOUDSDK_CONTAINER_CLUSTER=${_GKE_CLUSTER}'
+
+# deploy container image to GKE
+- name: "gcr.io/cloud-builders/gke-deploy"
+  args:
+  - run
+  - --filename=deployment-tomcat.yml
+  - --image=gcr.io/${_PROJECT}/${_CONTAINERNAME}:${_VERSION}
+  - --location=${_ZONE}
+  - --cluster=${_GKE_CLUSTER}
   
 substitutions:
     #GCP Specific configuration. Please DON'T change anything
