--- a/deployment-tomcat.yml
+++ b/deployment-tomcat.yml
@@ -32,7 +32,7 @@ spec:
   ports:
   - protocol: "TCP"
     port: 8080
-    targetPort: "8080"
+    targetPort: ""
   selector:
     app: "tomcat"
   type: "LoadBalancer"
