--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,48 +1,48 @@
-steps:
-#Build the image 
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['build','-t','gcr.io/$PROJECT_ID/quickstart-docker-repo/${_IMAGE}-image:${_VERSION}','.']
+#steps:
+##Build the image 
+#- name: 'gcr.io/cloud-builders/docker'
+#  args: ['build','-t','gcr.io/$PROJECT_ID/quickstart-docker-repo/${_IMAGE}-image:${_VERSION}','.']
 
-#Push the image  
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['push','gcr.io/$PROJECT_ID/quickstart-docker-repo/${_IMAGE}-image:${_VERSION}']
+##Push the image  
+#- name: 'gcr.io/cloud-builders/docker'
+#  args: ['push','gcr.io/$PROJECT_ID/quickstart-docker-repo/${_IMAGE}-image:${_VERSION}']
   
 ##Update the container image using kubectl set
-- name: 'gcr.io/cloud-builders/kubectl'
-  args:
-  - 'set'
-  - 'image'
-  - 'deployment/${_DEPLOYMENTNAME}'
-  - '${_CONTAINERNAME}=gcr.io/$PROJECT_ID/quickstart-docker-repo/${_IMAGE}-image:${_VERSION}'
-  env:
-  - 'CLOUDSDK_COMPUTE_ZONE=${_ZONE}'
-  - 'CLOUDSDK_CONTAINER_CLUSTER=${_GKE_CLUSTER}'
+#- name: 'gcr.io/cloud-builders/kubectl'
+#  args:
+#  - 'set'
+#  - 'image'
+#  - 'deployment/${_DEPLOYMENTNAME}'
+#  - '${_CONTAINERNAME}=gcr.io/$PROJECT_ID/quickstart-docker-repo/${_IMAGE}-image:${_VERSION}'
+#  env:
+#  - 'CLOUDSDK_COMPUTE_ZONE=${_ZONE}'
+#  - 'CLOUDSDK_CONTAINER_CLUSTER=${_GKE_CLUSTER}'
 
-# deploy container image to GKE
-- name: "gcr.io/cloud-builders/gke-deploy"
-  args:
-  - run
-  - --filename=deployment-tomcat.yml
-  - --image=gcr.io/$PROJECT_ID/quickstart-docker-repo/${_IMAGE}-image:${_VERSION}
-  - --location=${_ZONE}
-  - --cluster=${_GKE_CLUSTER}
+## deploy container image to GKE
+#- name: "gcr.io/cloud-builders/gke-deploy"
+#  args:
+#  - run
+#  - --filename=deployment-tomcat.yml
+#  - --image=gcr.io/$PROJECT_ID/quickstart-docker-repo/${_IMAGE}-image:${_VERSION}
+#  - --location=${_ZONE}
+#  - --cluster=${_GKE_CLUSTER}
   
-substitutions:
-    #GCP Specific configuration. Please DON'T change anything
-    _PROJECT: test-project-20200
-    _ZONE: us-central1-a
-    _GKE_CLUSTER: ntek-cluster
+#substitutions:
+#    #GCP Specific configuration. Please DON'T change anything
+#    _PROJECT: test-project-20200
+#    _ZONE: us-central1-a
+#    _GKE_CLUSTER: ntek-cluster
     
-    #Repository Specific configuration. DevOps can change this settings
-    _DEPLOYMENTNAME: tomcat
-    _CONTAINERNAME: tomcat   
-    _REPO_NAME: docker-image-files
+#    #Repository Specific configuration. DevOps can change this settings
+#    _DEPLOYMENTNAME: tomcat
+#    _CONTAINERNAME: tomcat   
+#    _REPO_NAME: docker-image-files
     
-    #Developers ONLY change
-    _IMAGE: tomcat
-    _VERSION: v1.0
+#    #Developers ONLY change
+#    _IMAGE: tomcat
+#    _VERSION: v1.0
 
-#- name: 'gcr.io/cloud-builders/docker'
-#  args: [ 'build', '-t', 'us-central1-docker.pkg.dev/$PROJECT_ID/quickstart-docker-repo/quickstart-image:tag1', '.' ]
-#images:
-#- 'us-central1-docker.pkg.dev/$PROJECT_ID/quickstart-docker-repo/quickstart-image:tag1'
+##- name: 'gcr.io/cloud-builders/docker'
+##  args: [ 'build', '-t', 'us-central1-docker.pkg.dev/$PROJECT_ID/quickstart-docker-repo/quickstart-image:tag1', '.' ]
+##images:
+##- 'us-central1-docker.pkg.dev/$PROJECT_ID/quickstart-docker-repo/quickstart-image:tag1'
