--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,17 +1,7 @@
 steps:
 steps:
-- name: 'gcr.io/cloud-builders/gcloud'
-  entrypoint: 'bash'
-  args:
-  - '-eEuo'
-  - 'pipefail'
-  - '-c'
-  - |-
-    if (( $(date '+%-e') % 2 )); then
-      echo "today is an odd day"
-    else
-      echo "today is an odd day, with an even number"
-    fi
+- name: 'bash'
+  args: ['cat /etc/os-release']
  
 #steps: 
 ##Build the image 
