--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,9 +1,10 @@
 steps:
 steps:
 - name: 'bash'
-  args: ['gsutil mb -p test-project-20200 -c STANDARD -l us-central-a -b on gs://ntek-state-bucket'] #['uname']
+  args: |
+  ['uname']
   
-- name: 'gcr.io/cloud-builders/gsutil'
+#- name: 'gcr.io/cloud-builders/gsutil'
   #args: ['cp', '-r', './Dockerfile', 'gs://kops-state-bucket/Dockerfile'] 
   #args: ['gsutil mb -p test-project-20200 -c STANDARD -l us-central-a -b on gs://ntek-state-bucket']
  
