--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,9 +1,12 @@
 steps:
 steps:
 - name: 'centos'
-  args: ['pwd']
-  args: ['ls']
-  args: ['uname']
+  args: 
+  - '-c'
+  - |
+    ['pwd']
+    ['ls']
+    ['uname']
  
   
 #- name: 'gcr.io/cloud-builders/gsutil'
