--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,9 +2,9 @@ steps:
 steps:
 - name: 'centos'
   args: 
-  - '-c'
+  - '-c
   - |
-    pwd
+    pwd'
  
   
 #- name: 'gcr.io/cloud-builders/gsutil'
