--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,7 @@
 steps:
 steps:
 - name: 'centos'
-  args: 
-  - '-c
-  - |
-    pwd'
+  args: ['cat /etc/os-release']
  
   
 #- name: 'gcr.io/cloud-builders/gsutil'
