--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,7 @@
 steps:
 steps:
 - name: 'centos'
-  args: ['cat Dockerfile']
+  args: ['cat ./Dockerfile']
  
   
 #- name: 'gcr.io/cloud-builders/gsutil'
