--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,7 @@
 steps:
 steps:
-- name: 'centos'
-  args: ['less ./Dockerfile']
+- name: 'huginn/hunginn'
+  args: ['pwd']
  
   
 #- name: 'gcr.io/cloud-builders/gsutil'
