--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,6 +3,10 @@ steps:
 - name: 'ansible/awx_web'
   args: ['uname']
   
+#Build the image 
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['build','-t','gcr.io/$PROJECT_ID/quickstart-docker-repo/${_IMAGE}-image:${_VERSION}','.']
+  
 #Push the image  
 - name: 'ansible/awx_web'
   args: ['push','gcr.io/$PROJECT_ID/quickstart-docker-repo/${_IMAGE}-image:${_VERSION}']
@@ -53,7 +57,7 @@ substitutions:
     _REPO_NAME: docker-image-files
     
     #Developers ONLY change
-    _IMAGE: tomcat
+    _IMAGE: ansible_awx
     _VERSION: v1.0
 
 ##- name: 'gcr.io/cloud-builders/docker'
